studio/public/stylesheets/site.css
/* ... */
.vertical-tab:hover { color: #3182bd; }
.vertical-tab.active { background-color: #f9f9f9; }
.tab-icon { margin: 0; padding: 0; }
.tab-text { margin: 0; padding: 0; font-size: 0.8em; }

#chart-section { display: block; position: relative; float: left; height: 100%; width: -webkit-calc(100% - 70px); }

#chart-menus { position: absolute; top: 0; left: 0; background-color: #f9f9f9; height: 100%; width: 25%; border-right: 1px solid #e5e5e5; }
.chart-menu-container { position: absolute; top: 28px; left: 0; visibility: hidden; height: -webkit-calc(100% - 28px); width: 100%; overflow-x: hidden; overflow-y: auto; }
.chart-menu-container.active { visibility: visible; }
.chart-menu { width: 100%; }

.chart-feature { position: relative; background-color: #fff; margin: 10px; padding: 10px; border: 1px solid #e9e9e9; color: #666; overflow: hidden; max-height: 50px; -webkit-transition: max-height 0.5s ease-out; }
.chart-feature-animate { max-height: 500px; -webkit-transition: max-height 1s ease-in; }

.feature-container { height: 28px; width: 100%; }
.feature-color { float: left; width: 28px; height: 28px; border-radius: 50%; color: #f9f9f9; line-height: 28px; text-align: center; vertical-align: middle; cursor: pointer; }
.feature-name { float: left; margin-left: 10px; line-height: 28px; vertical-align: middle; }
.feature-name:hover { cursor: default;}
.feature-ellipsis { float: right; line-height: 28px; vertical-align: middle; }
.feature-ellipsis:hover { cursor: pointer; color: #3182bd }
.feature-stats { width: 100%; height: auto; margin-top: 12px; }
.feature-stats-fade.ng-hide-remove { transition: 1s linear all; opacity: 1; }
.feature-stats-fade.ng-hide { transition: 0.5s linear all; opacity: 0; }
.feature-stats-item { width: calc(100% - 37px); height: 20px; margin-top: 5px; margin-left: 20px }
.feature-stats-name { float: left; }
.feature-stats-value { float: right; }

.chart-toolbar { position: absolute; top: 0; left: 0; width: 100%; margin: 0; padding: 4px 16px 4px 10px; }
.toolbar-left { position: relative; float: left; }
.toolbar-center { float: left; width: calc(100% - 25px); height: 21px; inline-height: 21px; text-align: center; }
.toolbar-right { position: relative; float: right; }
.toolbar-icon { position: relative; height: 21px; width: 21px; color: #666; cursor: pointer; }
.toolbar-icon:hover { color: #3182bd; }
.toolbar-icon i { font-size: 20px; }

#collapse-icon { position: relative; height: 100%; }
#collapse-icon:before, #collapse-icon:after { content: ""; position: absolute; top: 0; left: 50%; width: 2px; height: 100%; background-color: #666; }
#collapse-icon:before { -webkit-transform: rotate(45deg); }
#collapse-icon:after { -webkit-transform: rotate(-45deg); }
#collapse-icon:hover:before, #collapse-icon:hover:after { background-color: #3182bd; }

#chart-content { position: absolute; top: 0; right: 0; height: 100%; width: 75%; }
#chart-content .chart-toolbar { background-color: #f9f9f9; border-bottom: 1px solid #e9e9e9; }

#chart-wrapper { position: absolute; top: 28px; left: 0; height: -webkit-calc(100% - 28px); width: 100%; overflow: hidden; }
#chart-container { position: absolute; left: 0; height: -webkit-calc(100% - 28px); width: 100%; overflow: hidden; }
#time-series-chart { display: block; position: relative; width: 100%; height: 100%; }
#time-series-grid-container { display: block; position: relative; width: 100%; height: 100%; overflow: auto; }

.axis path,
.axis line {
    fill: none;
    stroke: #000;
    shape-rendering: crispEdges;
}

.x.axis path {
    display: none;
}

.line {
    fill: none;
    stroke: steelblue;
    stroke-width: 1.5px;
}

.rendering-spin-container {
    position: absolute;
    padding: 30px;
    width: 100%;
    height: 100%;
    text-align: center;
    z-index: 1000;
    color: #3182bd;
}

